fix shitty alignment, new pfp

--- a/css/style.css
+++ b/css/style.css
@@ -18,11 +18,9 @@
   font-variant: normal;
   text-transform: none;
   line-height: 1;
-
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
 .icon-twitter:before {
   content: "\f099";
 }
@@ -46,7 +44,6 @@ body{
   font-display: swap;
  font-weight: 165;
   background-color: #212121;
-  text-align: center;
   scroll-behavior: smooth;
 }
 section{
@@ -61,6 +58,7 @@ background: #27292b;
  width: 98%;
  max-width: 600px;
  animation: scale-in-center 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+ text-align: center;
 }
 @keyframes scale-in-center {
   0% {
@@ -75,12 +73,16 @@ background: #27292b;
   }
 }
 img {
-    width: 126px;
+    width: 140px;
     object-fit: cover;
     border-radius: 50%;
-    margin-top: -.6em;
-    margin-left:0;
-    height: 126px;
+    margin-top: 0.1em;
+    margin-bottom: -0.1em;
+    margin-left: 0;
+    height: 140px;
+}
+.singleliner{
+  text-align: center;
 }
 i{
 padding: 0.35em;
@@ -101,15 +103,10 @@ h1{
   padding-left: 0;
   margin-left: 0;
   margin-right: 0;
-  font-size: 31px;
-  font-weight: 185;
-  margin-bottom: 0.4em;
-}
-h2, h3, h4, h5{
-  padding-top: 0.5em;
   font-size: 28px;
-  font-weight: 175;
-  margin-bottom: 0.4em;
+  font-weight: 185;
+  margin-bottom: 0.2em;
+  text-align: center;
 }
 ul {
   list-style-position: inside;
@@ -124,4 +121,16 @@ a:hover{
 }
 a:active{
   color: #26c5ff;
+}
+p{
+  margin-left: 10px;
+  margin-right: 3px;
+  text-align: left;
+}
+h3{
+  font-size: 22px;
+  font-weight: 130
+}
+.lastelement{
+  padding-bottom: 0.6em;
 }
